gerboweb/deploy/iptables.rules
# Generated by iptables-save v1.8.0 on Thu Apr  4 11:06:33 2019
*nat
:PREROUTING ACCEPT [13:648]
:INPUT ACCEPT [8:440]
:OUTPUT ACCEPT [18:1260]
:POSTROUTING ACCEPT [18:1260]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 23 -j REDIRECT --to-ports 2342
COMMIT
# Completed on Thu Apr  4 11:06:33 2019
# Generated by iptables-save v1.8.0 on Thu Apr  4 11:06:33 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [360:761646]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2342 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 23 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Thu Apr  4 11:06:33 2019
